fix for bug 40449, Cache does not store latest value of pages, r/a=gagan